--- a/style.css
+++ b/style.css
@@ -181,13 +181,8 @@ li{
     background-repeat: no-repeat !important;
     background-size:auto !important;
     position: relative !important;
-    height: 100% !important;
+    height: 100vh; /* Use viewport height instead of percentage */
     margin: 0;
-}
-
-.hero-image img{
-    height: 100;
-    background-size: 100%;
 }
 
 .hero-text {
