--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@ body{
     margin: 0 !important;
 }
 
-/*This is for parallax*/
+/*This is for parallaax*/
 
 .parallax{
         background-image: url(blackjack.jpg);
